--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="login.css">
 </head>
-<body class="container-fluid d-flex align-items-center height-100">
-    <div class="container border border-primary my-auto">
+<body class="container-fluid d-flex align-items-center">
+    <div class="container border border-primary">
         <div class="row">
             <section class="col text-white" style="background-color: #3BB397;">
                 <h1 class="text-center">Welcome Back!</h1>
